add driver_data to login/register
