# app/Http/Controllers/Api/User/RegisterUserController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers\Api\User;
 use App\Enum\UserRole;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\Api\User\RegisterRequest;
+use App\Http\Resources\Driver\UserDriverResource;
 use App\Http\Resources\User\UserResource;
 use App\Models\OnboardingUser;
 use App\Actions\OnboardingUser\Check\CheckOnboardingUserAction;
@@ -35,9 +36,18 @@ use Illuminate\Support\Facades\DB;
  *         response=200,
  *         description="OK",
  *         @OA\JsonContent(
- *              @OA\Property(property="user", type="object", ref="#/components/schemas/UserResource"),
- *              @OA\Property(property="access_token", type="string", example="3|OTdZhC1hXyYKSb8GasjSazFjak2RyN0G6rdDXQ4o2cffbd2f"),
- *              @OA\Property(property="refresh_token", type="string", example="4|OTdZhC1hXyYKSb8GasjSazFjak2RyN0G6rdDXQ4o2cffbd2f"),
+ *             oneOf={
+ *                 @OA\Property(property="data", type="object",
+ *                     @OA\Property(property="user", type="object", ref="#/components/schemas/UserDriverResource"),
+ *                     @OA\Property(property="access_token", type="string", example="3|OTdZhC1hXyYKSb8GasjSazFjak2RyN0G6rdDXQ4o2cffbd2f"),
+ *                     @OA\Property(property="refresh_token", type="string", example="4|OTdZhC1hXyYKSb8GasjSazFjak2RyN0G6rdDXQ4o2cffbd2f"),
+ *                 ),
+ *                 @OA\Property(property="data", type="object",
+ *                     @OA\Property(property="user", type="object", ref="#/components/schemas/UserResource"),
+ *                     @OA\Property(property="access_token", type="string", example="3|OTdZhC1hXyYKSb8GasjSazFjak2RyN0G6rdDXQ4o2cffbd2f"),
+ *                     @OA\Property(property="refresh_token", type="string", example="4|OTdZhC1hXyYKSb8GasjSazFjak2RyN0G6rdDXQ4o2cffbd2f"),
+ *                 ),
+ *              }
  *         )
  *     )
  * )
@@ -60,7 +70,7 @@ class RegisterUserController extends Controller
             ->handle($dto);
 
         if (!$checkedOnboardingUser instanceof OnboardingUser) {
-            return $checkedOnboardingUser;
+            return $checkedOnboardingUser; // ToDo разобраться, что тут
         }
 
         try {
@@ -84,7 +94,9 @@ class RegisterUserController extends Controller
             $tokens = $this->generateTokensUserAction->handle($user);
 
             return response()->json([
-                'user' => UserResource::make($user)->resolve(),
+                'user' => $user->isDriver()
+                        ? UserDriverResource::make($user)->resolve()
+                        : UserResource::make($user)->resolve(),
                 'accessToken' => $tokens['accessToken'],
                 'accessTokenExpires' => $tokens['accessTokenExpires'],
                 'refreshToken' => $tokens['refreshToken'],
